--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -8,5 +8,5 @@ cmake_minimum_required(VERSION 3.13.1)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(app LANGUAGES C)
-
+set(BOARD nucleo_wb55rg)
 target_sources(app PRIVATE src/main.c)
