--- a/app/prj.conf
+++ b/app/prj.conf
@@ -3,10 +3,7 @@
 #
 # This file contains selected Kconfig options for the application.
 
-CONFIG_GPIO=y
-CONFIG_SENSOR=y
-CONFIG_BLINK=y
-CONFIG_CAD_STM32_QSPI=y
+CONFIG_AD4002=y
 CONFIG_PWM=y
 CONFIG_LOG=y
 CONFIG_APP_LOG_LEVEL_DBG=y
