Fixed Printk Issue and Adjusted PWM Channel Pins

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -5,7 +5,5 @@
 
 CONFIG_AD4002=y
 CONFIG_PWM=y
-CONFIG_LOG=y
-CONFIG_APP_LOG_LEVEL_DBG=y
-CONFIG_LOG_PRINTK=y
+CONFIG_PRINTK=y
 CONFIG_ZERO_LATENCY_IRQS=y
