--- a/drivers/analog_ad4002/Kconfig
+++ b/drivers/analog_ad4002/Kconfig
@@ -5,7 +5,7 @@ menuconfig AD4002
     bool "Analog AD4002 SPI Device Driver"
     depends on DT_HAS_ST_STM32_PWM_ENABLED
     select SPI
-    select SPI_STM32
+    select SPI_STM32 if DT_HAS_ST_STM32_SPI_ENABLED
     select SPI_STM32_DMA if $(DT_STM32_SPI_HAS_DMA)
     select PWM
 	select USE_STM32_LL_TIM
