--- a/drivers/analog_ad4002/Kconfig
+++ b/drivers/analog_ad4002/Kconfig
@@ -1,12 +1,11 @@
 
-DT_STM32_SPI_HAS_DMA := $(dt_compat_any_has_prop,st_stm32_spi,dmas)
-
 menuconfig AD4002
     bool "Analog AD4002 SPI Device Driver"
     depends on DT_HAS_ST_STM32_PWM_ENABLED
     select SPI
     select SPI_STM32 if DT_HAS_ST_STM32_SPI_ENABLED
-    select SPI_STM32_DMA if $(DT_STM32_SPI_HAS_DMA)
+    select DMA
+    select DMA_STM32
     select PWM
 	select USE_STM32_LL_TIM
 	select USE_STM32_LL_RCC if SOC_SERIES_STM32F4X || SOC_SERIES_STM32F7X || SOC_SERIES_STM32H7X
