--- a/dts/bindings/analog/analog_ad4002.yaml
+++ b/dts/bindings/analog/analog_ad4002.yaml
@@ -14,6 +14,7 @@ include: [spi-device.yaml, base.yaml]
 properties:
   pwms:
     type: phandle-array
-  
   sample_period:
     type: int
+  spi-master:
+    type: boolean
