--- a/app/prj.conf
+++ b/app/prj.conf
@@ -4,6 +4,7 @@
 # This file contains selected Kconfig options for the application.
 
 CONFIG_AD4002=y
+CONFIG_FAST_PWM=y
 CONFIG_PWM=y
 CONFIG_PRINTK=y
 CONFIG_ZERO_LATENCY_IRQS=y
