--- a/dts/bindings/cad_pwm/st_stm32_pwm_custom_fast.yaml
+++ b/dts/bindings/cad_pwm/st_stm32_pwm_custom_fast.yaml
@@ -1,6 +1,6 @@
-description: STM32 PWM with Custom Trigger
+description: STM32 PWM with Fast Updates
 
-compatible: "st,stm32-pwm-custom-trigger"
+compatible: "st,stm32-pwm-custom-fast"
 
 include: [pwm-controller.yaml, base.yaml, pinctrl-device.yaml]
 
