Overhaul of ADC read start and stop with custom DMA callback

--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -8,3 +8,4 @@
 add_subdirectory_ifdef(CONFIG_CAD_STM32_QSPI cad_qspi)
 add_subdirectory_ifdef(CONFIG_AD4002 analog_ad4002)
 add_subdirectory_ifdef(CONFIG_FAST_PWM cad_pwm)
+add_subdirectory_ifdef(CONFIG_CAD_DMA_MINIMAL cad_dma)
