--- a/app/prj.conf
+++ b/app/prj.conf
@@ -8,9 +8,10 @@ CONFIG_FAST_PWM=y
 CONFIG_PWM=y
 CONFIG_PRINTK=y
 CONFIG_ZERO_LATENCY_IRQS=y
-CONFIG_SERIAL=y
 CONFIG_GPIO=y
 CONFIG_FPU=y
 CONFIG_ADC=y
 CONFIG_FLASH=y
 CONFIG_CAD_DMA_MINIMAL=y
+CONFIG_SERIAL=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
