Working Code with parameter normalization and fake data

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -15,3 +15,8 @@ CONFIG_FLASH=y
 CONFIG_CAD_DMA_MINIMAL=y
 CONFIG_SERIAL=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_POWEROFF=y
+CONFIG_STM32_WKUP_PINS=y
+#CONFIG_INPUT=y
+#CONFIG_INPUT_LONGPRESS=y
+#CONFIG_PM=y
